[gd_scene format=3 uid="uid://chp7eya6ont54"]

[ext_resource type="Script" uid="uid://c6fr0bb6g00bs" path="res://scripts/combat.gd" id="1_764e3"]

[node name="Control" type="Control" unique_id=451658673]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_764e3")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1748567293]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Left" type="ColorRect" parent="HBoxContainer" unique_id=965540416]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.26583335, 0.55, 0, 1)

[node name="Right" type="ColorRect" parent="HBoxContainer" unique_id=1372202083]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.71, 0, 0.011833153, 1)

[node name="ChoiceButtons" type="VBoxContainer" parent="." unique_id=1061261523]
layout_mode = 0
offset_left = 486.0
offset_top = 557.0
offset_right = 672.0
offset_bottom = 660.0

[node name="FightButton" type="Button" parent="ChoiceButtons" unique_id=9901340]
layout_mode = 2
text = "Fight"

[node name="FleeButton" type="Button" parent="ChoiceButtons" unique_id=904064414]
layout_mode = 2
text = "Flee
"

[node name="CombatUI" type="VBoxContainer" parent="." unique_id=640172574]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CombatUI" unique_id=690458918]
layout_mode = 2
text = "Words Words Words"

[node name="LineEdit" type="LineEdit" parent="CombatUI" unique_id=996283175]
layout_mode = 2
placeholder_text = "Words"
context_menu_enabled = false
caret_blink = true
caret_blink_interval = 0.5

[node name="TimerLabel" type="Label" parent="CombatUI" unique_id=722776388]
layout_mode = 2

[node name="Timer" type="Timer" parent="CombatUI" unique_id=430203787]
autostart = true
